Fixed section spacing

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -159,6 +159,6 @@ section {
   }
 
   section {
-    padding: 25px 0px;
+    padding: 40px 0px;
   }
 }
